<?xml version="1.0" encoding="utf-8"?>
<!--  
Overchan Android (Meta Imageboard Client)
Copyright (C) 2014-2016  miku-nyan <https://github.com/miku-nyan>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/postBackground" >
    
    <LinearLayout
        android:id="@+id/board_search_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/activityRootBackground"
        android:paddingStart="@dimen/list_row_padding_horizontal_tight"
        android:paddingEnd="@dimen/list_row_padding_horizontal_tight"
        android:visibility="gone" >
        <EditText
            android:id="@+id/board_search_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="@dimen/panel_height"
            android:hint="@string/search_bar_hint"
            android:singleLine="true"
            android:background="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:imeOptions="actionSearch"
            android:inputType="text" />
        <ImageButton
            style="@style/Widget_Eso_IconButton"
            android:id="@+id/board_search_previous"
            android:src="?attr/iconItemPrevious"
            app:tint="?attr/iconTint"
            android:contentDescription="@string/previous"
            android:visibility="gone" />
        <ImageButton
            style="@style/Widget_Eso_IconButton"
            android:id="@+id/board_search_next"
            android:src="?attr/iconItemNext"
            app:tint="?attr/iconTint"
            android:contentDescription="@string/next"
            android:visibility="gone" />
        <TextView
            android:id="@+id/board_search_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minWidth="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/itemInfoForeground"
            android:visibility="gone" />
        <ImageButton
            style="@style/Widget_Eso_IconButton"
            android:id="@+id/board_search_close"
            android:src="?attr/iconBtnClose"
            app:tint="?attr/iconTint"
            android:contentDescription="@string/close" />
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/board_main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/board_pullable_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fastScrollEnabled="true"
                android:divider="?attr/activityRootBackground"
                android:dividerHeight="4dp"
                android:scrollingCache="false"
                android:animationCache="false" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        
        <include
            android:id="@+id/board_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            layout="@layout/frame_loading"
            android:visibility="gone" />

        <include
            android:id="@+id/board_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            layout="@layout/frame_error"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/board_fab_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="?attr/actionAddPost"
            app:tint="?attr/iconTintOnPrimary"
            android:contentDescription="@string/menu_add_post"
            android:visibility="gone" />
    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/board_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="8"
        android:background="?attr/activityRootBackground"
        android:visibility="gone" >
        <ImageButton
            style="@style/Widget_Eso_IconButton"
            android:id="@+id/board_navigation_previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="?attr/iconItemPrevious"
            app:tint="?attr/iconTint"
            android:scaleType="fitStart"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/previous" />
        <TextView
            style="@style/SelectableItem"
            android:id="@+id/board_navigation_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:minHeight="@dimen/panel_height"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <ImageButton
            style="@style/Widget_Eso_IconButton"
            android:id="@+id/board_navigation_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="?attr/iconItemNext"
            app:tint="?attr/iconTint"
            android:scaleType="fitEnd"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:contentDescription="@string/next" />
    </LinearLayout>
    
    <Spinner
        android:id="@+id/board_catalog_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        android:visibility="gone" />
    
</LinearLayout>
